fix: ham mobile visibility

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -72,7 +72,7 @@
     width: 100%;
   }
 
-  .hamburger {
+  .hamburger.hamburger {
     display: flex;
   }
 
